--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -124,7 +124,7 @@
         <div class="triang bottom left"></div>
     </section>
     <section id="pt3">
-        <div class="content">
+        <div class="content js-fade">
             <div class="tag">
                 <h2>Como fazemos</h2>
             </div>
@@ -167,7 +167,7 @@
         <div class="triang bottom left"></div>
     </section>
     <section id="pt4">
-        <div class="content">
+        <div class="content js-fade">
             <div class="tag">
                 <h2>Quem somos</h2>
             </div>
@@ -178,7 +178,7 @@
         <div class="triang bottom left"></div>
     </section>
     <section id="pt5">
-        <div class="content">
+        <div class="content js-fade">
             <h1>Pronto para <strong>começar</strong>?</h1>
             <p>Estamos aqui para te ajudar nessa jornada</p>
             <a href="../pags/contato/contato.html"><button class="primario">Começar projeto</button></a>
@@ -187,17 +187,69 @@
     <section id="pt6">
         <div class="triang top right"></div>
         <div class="triang top left"></div>
-        <div class="content">
+        <div class="content js-fade">
             <h2>Duvidas frequentes</h2>
+            <div class="accordion">
+                <div class="header">
+                    <button>
+                        <span>Por que ter uma marca?</span>
+                        <img src="imagens/light-arrow-down.svg" alt="">
+                    </button>
+                </div>
+                <div class="content-ac">
+                    <p>
+                        Um ser humano nunca é igual a outro. Mesmo com características semelhantes aos outros, sempre possuem detalhes que os diferenciam. Isso também serve para as marcas, elas nasceram para criar desigualdade entre as empresas.
+                    </p>
+                </div>
+            </div>
+            <div class="accordion">
+                <div class="header">
+                    <button>
+                        <span>Quem precisa de uma marca?</span>
+                        <img src="imagens/light-arrow-down.svg" alt="">
+                    </button>
+                </div>
+                <div class="content-ac">
+                    <p>
+                        Vivemos em um mundo onde a autenticidade virou incomum. Vários seguem o fluxo das coisas e sem perceber, fazem do mesmo. Ter uma marca é para quem quer sair desse fluxo que não caba.
+                    </p>
+                </div>
+            </div>
+            <div class="accordion">
+                <div class="header">
+                    <button>
+                        <span>O que será entregado?</span>
+                        <img src="imagens/light-arrow-down.svg" alt="">
+                    </button>
+                </div>
+                <div class="content-ac">
+                    <p>
+                        Depende. Cada empresa tem seus próprios problemas para ser resolvidos. Após uma reunião para descobrir os tais problemas, enviaremos uma proposta do projeto.
+                    </p>
+                </div>
+            </div>
+            <div class="accordion">
+                <div class="header">
+                    <button>
+                        <span>O que é a Esplee?</span>
+                        <img src="imagens/light-arrow-down.svg" alt="">
+                    </button>
+                </div>
+                <div class="content-ac">
+                    <p>
+                        A Esplee é um estúdio de design que projeta identidades visuais aliadas a um auxílio do branding especialmente para pequenas empresas que buscam se diferenciar do mercado explorando o que ela tem de único.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="pt7">
-        <div class="content">
-            <h2>Conheça o Na Rota:</h2>
-            <div class="posts"></div>
+    <footer>
+        <img class="logo-footer" src="imagens/light-principal.svg" alt="logo-footer">
+        <div class="nav-footer">
+            <div class="icon-footer"></div>
+            <div class="icon-footer"></div>
         </div>
-    </section>
-    <footer></footer>
+    </footer>
     <script src="../../padrao-esplee/jquery-3.6.0.js"></script>
     <script src="../../padrao-esplee/padrao-esplee.js"></script>
     <script src="index.js"></script>
