--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -189,56 +189,58 @@
         <div class="triang top left"></div>
         <div class="content js-fade">
             <h2>Duvidas frequentes</h2>
-            <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>Por que ter uma marca?</span>
-                        <img src="imagens/light-arrow-down.svg" alt="">
-                    </button>
+            <div class="accordions">
+                <div class="accordion">
+                    <div class="header">
+                        <button>
+                            <span>Por que ter uma marca?</span>
+                            <img src="imagens/light-arrow-down.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="content-ac">
+                        <p>
+                            Um ser humano nunca é igual a outro. Mesmo com características semelhantes aos outros, sempre possuem detalhes que os diferenciam. Isso também serve para as marcas, elas nasceram para criar desigualdade entre as empresas.
+                        </p>
+                    </div>
                 </div>
-                <div class="content-ac">
-                    <p>
-                        Um ser humano nunca é igual a outro. Mesmo com características semelhantes aos outros, sempre possuem detalhes que os diferenciam. Isso também serve para as marcas, elas nasceram para criar desigualdade entre as empresas.
-                    </p>
+                <div class="accordion">
+                    <div class="header">
+                        <button>
+                            <span>Quem precisa de uma marca?</span>
+                            <img src="imagens/light-arrow-down.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="content-ac">
+                        <p>
+                            Vivemos em um mundo onde a autenticidade virou incomum. Vários seguem o fluxo das coisas e sem perceber, fazem do mesmo. Ter uma marca é para quem quer sair desse fluxo que não caba.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>Quem precisa de uma marca?</span>
-                        <img src="imagens/light-arrow-down.svg" alt="">
-                    </button>
+                <div class="accordion">
+                    <div class="header">
+                        <button>
+                            <span>O que será entregado?</span>
+                            <img src="imagens/light-arrow-down.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="content-ac">
+                        <p>
+                            Depende. Cada empresa tem seus próprios problemas para ser resolvidos. Após uma reunião para descobrir os tais problemas, enviaremos uma proposta do projeto.
+                        </p>
+                    </div>
                 </div>
-                <div class="content-ac">
-                    <p>
-                        Vivemos em um mundo onde a autenticidade virou incomum. Vários seguem o fluxo das coisas e sem perceber, fazem do mesmo. Ter uma marca é para quem quer sair desse fluxo que não caba.
-                    </p>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>O que será entregado?</span>
-                        <img src="imagens/light-arrow-down.svg" alt="">
-                    </button>
-                </div>
-                <div class="content-ac">
-                    <p>
-                        Depende. Cada empresa tem seus próprios problemas para ser resolvidos. Após uma reunião para descobrir os tais problemas, enviaremos uma proposta do projeto.
-                    </p>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="header">
-                    <button>
-                        <span>O que é a Esplee?</span>
-                        <img src="imagens/light-arrow-down.svg" alt="">
-                    </button>
-                </div>
-                <div class="content-ac">
-                    <p>
-                        A Esplee é um estúdio de design que projeta identidades visuais aliadas a um auxílio do branding especialmente para pequenas empresas que buscam se diferenciar do mercado explorando o que ela tem de único.
-                    </p>
+                <div class="accordion">
+                    <div class="header">
+                        <button>
+                            <span>O que é a Esplee?</span>
+                            <img src="imagens/light-arrow-down.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="content-ac">
+                        <p>
+                            A Esplee é um estúdio de design que projeta identidades visuais aliadas a um auxílio do branding especialmente para pequenas empresas que buscam se diferenciar do mercado explorando o que ela tem de único.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
