--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../../padrao-esplee/padrao-esplee.css">
-
-    <!--Padrão Mobile-->
+    <link rel="stylesheet" href="padrao-esplee/padrao-esplee.css">
+    
+    <!--Versão Mobile-->
     <link rel="stylesheet" href="css/mobile.css" media="all">
 
     <!--Versão Tablet-->
@@ -15,6 +15,8 @@
 
     <!--Versão Desktop-->
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1280px)">
+
+    <link rel="stylesheet" href="padrao-esplee/font.css">
 
     <title>Home</title>
 </head>
@@ -27,9 +29,9 @@
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
-                    <a href="../projetos.html">Projeto</a>
+                    <a href="#">Projeto</a>
                     <a href="#">Sobre Nós</a>
-                    <a href="../../contato/contato.html">Contato</a>
+                    <a href="#">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
                     <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
@@ -43,9 +45,9 @@
                     </div>
                     <div class="links">
                         <a href="#">Na Rota</a>
-                        <a href="../projetos.html">Projeto</a>
+                        <a href="#">Projeto</a>
                         <a href="#">Sobre Nós</a>
-                        <a href="../../contato/contato.html">Contato</a>
+                        <a href="#">Contato</a>
                     </div>
                 </div>
             </nav>
@@ -54,11 +56,11 @@
                     <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                     <h5>Todos tem uma história que precisa ser contada</h5>
                 </div>
-                <a href="../secundarias/contato/contato.html">
+                <a href="#">
                     <button class="primario">Começar projeto</button>
                 </a>
                 <div id="seta">
-                    <img src="../../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
+                    <img src="imagens/light-arrow-down.svg" alt="seta-baixo">
                 </div>
             </div>
         </div>
@@ -99,21 +101,21 @@
                 <a href="#">
                     <div id="case1" class="case">
                         <div class="mais-info">
-                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="imagens/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
                 <a href="#">
                     <div id="case2" class="case">
                         <div class="mais-info">
-                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="imagens/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
                 <a href="#">
                     <div id="case3" class="case">
                         <div class="mais-info">
-                            <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
+                            <img src="imagens/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
@@ -143,23 +145,23 @@
                 </div>
                 <div class="passo n1">
                     <h4 class="header">Entender o problema</h4>
-                    <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+                    <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos tenham a consiência do problema atual.</p>
                 </div>
                 <div class="passo n2">
-                    <h4 class="header">n2</h4>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                    <h4 class="header">Muita pesquisa</h4>
+                    <p class="text">Depois que todos estão alinhados com o que fazer, agora o objetivo é fazer pesquisas com seus clientes para entender seus motivos e dores. Afinal, quem realmente conhece seu público é ele mesmo.</p>
                 </div>
                 <div class="passo n3">
-                    <h4 class="header">n3</h4>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                    <h4 class="header">Possível solução</h4>
+                    <p class="text">Com os dados que foram coletados, criaremos possíveis soluções que sejam principalmente agradáveis para o público alvo da empresa e para os envolvidos no projeto.</p>
                 </div>
                 <div class="passo n4">
-                    <h4 class="header">n4</h4>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                    <h4 class="header">Testando ideia</h4>
+                    <p class="text">Com várias possíveis soluções para o problema, traremos vida à elas na prática para testá-las em diversos protótipos do que seria o ideal para o projeto de marca.</p>
                 </div>
                 <div class="passo n5">
-                    <h4 class="header">n5</h4>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                    <h4 class="header">Validando ideia</h4>
+                    <p class="text">Com vários protótipos feitos, chegou a hora de finalmente escolher o finalista com base nas ideias dos envolvidos no projeto. Com o protótipo escolhido, desenvolveremos com muito mais eficiência o projeto de marca.</p>
                 </div>
             </div>  
         </div>
@@ -181,7 +183,7 @@
         <div class="content js-fade">
             <h1>Pronto para <strong>começar</strong>?</h1>
             <p>Estamos aqui para te ajudar nessa jornada</p>
-            <a href="../pags/contato/contato.html"><button class="primario">Começar projeto</button></a>
+            <a href="#"><button class="primario">Começar projeto</button></a>
         </div>
     </section>
     <section id="pt6">
@@ -194,12 +196,12 @@
                     <div class="header">
                         <button>
                             <span>Por que ter uma marca?</span>
-                            <img src="imagens/light-arrow-down.svg" alt="">
+                            <img src="img/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
                         <p>
-                            Um ser humano nunca é igual a outro. Mesmo com características semelhantes aos outros, sempre possuem detalhes que os diferenciam. Isso também serve para as marcas, elas nasceram para criar desigualdade entre as empresas.
+                            Seres humanos nunca são iguais aos outros. Mesmo com características semelhantes aos outros, sempre possuem detalhes que os diferenciam. Isso também serve para as marcas, elas nasceram para criar desigualdade entre as empresas.
                         </p>
                     </div>
                 </div>
@@ -207,7 +209,7 @@
                     <div class="header">
                         <button>
                             <span>Quem precisa de uma marca?</span>
-                            <img src="imagens/light-arrow-down.svg" alt="">
+                            <img src="img/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -220,7 +222,7 @@
                     <div class="header">
                         <button>
                             <span>O que será entregado?</span>
-                            <img src="imagens/light-arrow-down.svg" alt="">
+                            <img src="img/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -233,7 +235,7 @@
                     <div class="header">
                         <button>
                             <span>O que é a Esplee?</span>
-                            <img src="imagens/light-arrow-down.svg" alt="">
+                            <img src="img/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -252,8 +254,8 @@
             <div class="icon-footer"></div>
         </div>
     </footer>
-    <script src="../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="padrao-esplee/jquery-3.6.0.js"></script>
+    <script src="padrao-esplee/padrao-esplee.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
