--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="header">
                         <button>
                             <span>Por que ter uma marca?</span>
-                            <img src="img/light-arrow-down.svg" alt="">
+                            <img src="imagens/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -209,7 +209,7 @@
                     <div class="header">
                         <button>
                             <span>Quem precisa de uma marca?</span>
-                            <img src="img/light-arrow-down.svg" alt="">
+                            <img src="imagens/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -222,7 +222,7 @@
                     <div class="header">
                         <button>
                             <span>O que será entregado?</span>
-                            <img src="img/light-arrow-down.svg" alt="">
+                            <img src="imagens/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
@@ -235,7 +235,7 @@
                     <div class="header">
                         <button>
                             <span>O que é a Esplee?</span>
-                            <img src="img/light-arrow-down.svg" alt="">
+                            <img src="imagens/light-arrow-down.svg" alt="">
                         </button>
                     </div>
                     <div class="content-ac">
