--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="header-content">
             <nav>
                 <div class="nav-ico" id="nav-ico-logo">
-                    <a href="index.html"><img src="imagens/simbolo.svg" alt="nav-logo"></a>
+                    <a href="index.html"><img src="imagens/logos/SVG/simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
@@ -34,7 +34,7 @@
                     <a href="#">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
+                    <a href="#"><img id="img-cancel" src="imagens/" alt="menu-ico"></a>
                 </div>
                 <div class="background"></div>
                 <div class="navbar">
