--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
     <footer>
         <img class="logo-footer" src="assets/logos/SVG/light-principal.svg" alt="logo-footer">
         <div class="nav-footer">
-            <div class="icon-footer"></div>
+            <a href="#">
+                <div class="icon-footer"><img src="assets/icon/instagram.png" alt="icon-instagram"></div>
+            </a>
         </div>
     </footer>
     <script src="assets/padrao-esplee/jquery-3.6.0.js"></script>
