--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                     <a href="index.html"><img src="assets/logos/SVG/simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
-                    <a href="#">Na Rota</a>
-                    <a href="#">Projeto</a>
+                    <a href="pags/projetos/projetos.html">Projeto</a>
                     <a href="#">Sobre Nós</a>
-                    <a href="#">Contato</a>
+                    <a href="pags/contato/contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
                     <a href="#"><img id="img-cancel" src="assets/icon/light-menu.svg" alt="menu-ico"></a>
@@ -44,10 +43,14 @@
                         </div>
                     </div>
                     <div class="links">
-                        <a href="#">Na Rota</a>
-                        <a href="#">Projeto</a>
+                        <a href="#">Home</a>
+                        <a href="pags/projetos/projetos.html">
+                            Projeto
+                        </a>
                         <a href="#">Sobre Nós</a>
-                        <a href="#">Contato</a>
+                        <a href="pags/contato/contato.html">
+                            Contato
+                        </a>
                     </div>
                 </div>
             </nav>
