--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h3>Marcas fortes não surgem do nada</h3>
             <div class="help">
                 <p>Toque abaixo</p>
-                <img src="imagens/dark-arrow-down.svg" alt="">
+                <img src="assets/icon/dark-arrow-down.svg" alt="">
             </div>
             <div class="passos">
                 <div class="itens">
