--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="js-fade">
+            <div class="align js-fade">
                 <div id="header-headings">
                     <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                     <h5>Todos tem uma história que precisa ser contada</h5>
@@ -123,7 +123,9 @@
                     </div>
                 </a>
             </div>
-            <button class="outline-light">+ Cases</button>
+            <a href="">
+                <button class="outline-light">+ Cases</button>
+            </a>
         </div>
         <div class="triang bottom right"></div>
         <div class="triang bottom left"></div>
@@ -186,7 +188,9 @@
         <div class="content js-fade">
             <h1>Pronto para <strong>começar</strong>?</h1>
             <p>Estamos aqui para te ajudar nessa jornada</p>
-            <a href="#"><button class="primario">Começar projeto</button></a>
+            <a href="#">
+                <button class="primario">Começar projeto</button>
+            </a>
         </div>
     </section>
     <section id="pt6">
