--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="align js-fade">
                 <div id="header-headings">
                     <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
-                    <h5>Todos tem uma história que precisa ser contada</h5>
+                    <p>Todos tem uma história que precisa ser contada</p>
                 </div>
                 <a href="#">
                     <button class="primario">Começar projeto</button>
@@ -132,41 +132,43 @@
     </section>
     <section id="pt3">
         <div class="content js-fade">
-            <div class="tag">
-                <h2>Como fazemos</h2>
-            </div>
-            <h3>Marcas fortes não surgem do nada</h3>
-            <div class="help">
-                <p>Toque abaixo</p>
-                <img src="assets/icon/dark-arrow-down.svg" alt="">
-            </div>
-            <div class="passos">
-                <div class="itens">
-                    <div class="item"><p>01.</p></div>
-                    <div class="item"><p>02.</p></div>
-                    <div class="item"><p>03.</p></div>
-                    <div class="item"><p>04.</p></div>
-                    <div class="item"><p>05.</p></div>
+            <div class="aux">
+                <div class="tag">
+                    <h2>Como fazemos</h2>
                 </div>
-                <div class="passo n1">
-                    <h4 class="header">Entender o problema</h4>
-                    <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos tenham a consiência do problema atual.</p>
+                <h3>Marcas fortes não surgem do nada</h3>
+                <div class="help">
+                    <p>Toque abaixo</p>
+                    <img src="assets/icon/dark-arrow-down.svg" alt="">
                 </div>
-                <div class="passo n2">
-                    <h4 class="header">Muita pesquisa</h4>
-                    <p class="text">Depois que todos estão alinhados com o que fazer, agora o objetivo é fazer pesquisas com seus clientes para entender seus motivos e dores. Afinal, quem realmente conhece seu público é ele mesmo.</p>
-                </div>
-                <div class="passo n3">
-                    <h4 class="header">Possível solução</h4>
-                    <p class="text">Com os dados que foram coletados, criaremos possíveis soluções que sejam principalmente agradáveis para o público alvo da empresa e para os envolvidos no projeto.</p>
-                </div>
-                <div class="passo n4">
-                    <h4 class="header">Testando ideia</h4>
-                    <p class="text">Com várias possíveis soluções para o problema, traremos vida à elas na prática para testá-las em diversos protótipos do que seria o ideal para o projeto de marca.</p>
-                </div>
-                <div class="passo n5">
-                    <h4 class="header">Validando ideia</h4>
-                    <p class="text">Com vários protótipos feitos, chegou a hora de finalmente escolher o finalista com base nas ideias dos envolvidos no projeto. Com o protótipo escolhido, desenvolveremos com muito mais eficiência o projeto de marca.</p>
+                <div class="passos">
+                    <div class="itens">
+                        <div class="item"><p>01.</p></div>
+                        <div class="item"><p>02.</p></div>
+                        <div class="item"><p>03.</p></div>
+                        <div class="item"><p>04.</p></div>
+                        <div class="item"><p>05.</p></div>
+                    </div>
+                    <div class="passo n1">
+                        <h4 class="header">Entender o problema</h4>
+                        <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos tenham a consiência do problema atual.</p>
+                    </div>
+                    <div class="passo n2">
+                        <h4 class="header">Muita pesquisa</h4>
+                        <p class="text">Depois que todos estão alinhados com o que fazer, agora o objetivo é fazer pesquisas com seus clientes para entender seus motivos e dores. Afinal, quem realmente conhece seu público é ele mesmo.</p>
+                    </div>
+                    <div class="passo n3">
+                        <h4 class="header">Possível solução</h4>
+                        <p class="text">Com os dados que foram coletados, criaremos possíveis soluções que sejam principalmente agradáveis para o público alvo da empresa e para os envolvidos no projeto.</p>
+                    </div>
+                    <div class="passo n4">
+                        <h4 class="header">Testando ideia</h4>
+                        <p class="text">Com várias possíveis soluções para o problema, traremos vida à elas na prática para testá-las em diversos protótipos do que seria o ideal para o projeto de marca.</p>
+                    </div>
+                    <div class="passo n5">
+                        <h4 class="header">Validando ideia</h4>
+                        <p class="text">Com vários protótipos feitos, chegou a hora de finalmente escolher o finalista com base nas ideias dos envolvidos no projeto. Com o protótipo escolhido, desenvolveremos com muito mais eficiência o projeto de marca.</p>
+                    </div>
                 </div>
             </div>  
         </div>
@@ -175,11 +177,13 @@
     </section>
     <section id="pt4">
         <div class="content js-fade">
-            <div class="tag">
-                <h2>Quem somos</h2>
+            <div class="aux">
+                <div class="tag">
+                    <h2>Quem somos</h2>
+                </div>
+                <h3>Esse é o nosso jeito de fazer, o Esplee Style!</h3>
+                <p>Esplee é um estúdio focado em explorar a autenticidade de cada empresa com o objetivo de projetar a identidade visual junto à uma estratégia de branding para principalmente empresas que são focadas no digital.</p>
             </div>
-            <h3>Esse é o nosso jeito de fazer, o Esplee Style!</h3>
-            <p>Esplee é um estúdio focado em explorar a autenticidade de cada empresa com o objetivo de projetar a identidade visual junto à uma estratégia de branding para principalmente empresas que são focadas no digital.</p>
         </div>
         <div class="triang bottom right"></div>
         <div class="triang bottom left"></div>
