--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                     <a href="pags/projetos/projetos.html">Projeto</a>
                     <a href="#">Sobre Nós</a>
                     <a href="pags/contato/contato.html">Contato</a>
+                    <div class="social-icon">
+                        <a href="#">
+                            <img src="assets/icon/behance-light.png" alt="icon-behance">
+                        </a>
+                        <a href="#">
+                            <img src="assets/icon/instagram-light.png" alt="icon-instagram">
+                        </a>
+                    </div>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
                     <a href="#"><img id="img-cancel" src="assets/icon/light-menu.svg" alt="menu-ico"></a>
@@ -51,6 +59,14 @@
                         <a href="pags/contato/contato.html">
                             Contato
                         </a>
+                        <div class="social-icon">
+                            <a href="#">
+                                <img src="assets/icon/behance-light.png" alt="icon-behance">
+                            </a>
+                            <a href="#">
+                                <img src="assets/icon/instagram-light.png" alt="icon-instagram">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -262,7 +278,10 @@
         <img class="logo-footer" src="assets/logos/SVG/light-principal.svg" alt="logo-footer">
         <div class="nav-footer">
             <a href="#">
-                <div class="icon-footer"><img src="assets/icon/instagram.png" alt="icon-instagram"></div>
+                <div class="icon-footer"><img src="assets/icon/behance-light.png" alt="icon-instagram"></div>
+            </a>
+            <a href="#">
+                <div class="icon-footer"><img src="assets/icon/instagram-light.png" alt="icon-behance"></div>
             </a>
         </div>
     </footer>
